# us-stock-scraper

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/data_sources/: base.py  polygon_client.py
backend/app/models/: __init__.py  collection_log.py  daily_price.py  dividend.py  stock_split.py  surge_event.py  surge_tracking.py  ticker.py  user_setting.py
backend/app/routers/: admin.py  settings.py  stocks.py  surges.py  tracking.py
backend/app/schemas/: admin.py  settings.py  stock.py  surge.py  tracking.py
backend/app/services/: settings_service.py  stock_service.py  surge_service.py  tracking_service.py
backend/app/tasks/: backfill.py  bulk_download.py  daily_collection.py  scheduler.py  ticker_sync.py
backend/app/utils/: rate_limiter.py
backend/tests/: conftest.py  test_api_admin.py  test_api_surges.py  test_rate_limiter.py  test_services.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/surges/: page.tsx
frontend/src/app/tracking/: page.tsx
frontend/src/components/charts/: DayOfWeekChart.tsx  SectorDistChart.tsx  StockChart.tsx  SurgeTrendChart.tsx  (+1 more)
frontend/src/hooks/: useAdmin.ts  useSearch.ts  useSettings.ts  useStockChart.ts  useSurges.ts  useTracking.ts
frontend/src/lib/: api.ts  formatters.ts
frontend/src/stores/: uiStore.ts
frontend/src/types/: index.ts
(+10 files in other folders)
